Update python-adal to version 1.2.5 / rev 8 via SR 850507
https://build.opensuse.org/request/show/850507
by user rjschwei + dimstar_suse
- New upstream release
  + Version 1.2.5
  + For detailed information about changes see the
    HISTORY.txt file provided with this package
- Update HISTORY.txt from github releases page (forwarded request 850420 from glaubitz)

--- a/packages/p/python-adal/HISTORY.txt
+++ b/packages/p/python-adal/HISTORY.txt
@@ -1,3 +1,8 @@
+ADAL Python 1.2.5
+
+    Bugfix to address error "InvalidScope : FaultMessage: ID3082: The request scope is not valid or is unsupported." when using
+    username-password flow with federated user account while your tenant is migrating to a different cloud. (#240)
+
 ADAL Python 1.2.4
 
     Update project metadata on PyPI (#231 )
